<resources>
    <string name="app_name">Zup Movies</string>

    <string name="msg_fill_in_search_term">Fill in search term.</string>
    <string name="desc_img_movie">movie image</string>
    <string name="lbl_plot">Plot</string>
    <string name="str_text">Set in a future-world where humans can control other humans in mass-scale, multi-player online gaming environments, a star player from a game called (Slayers) looks to regain his independence while taking down the game\'s mastermind.</string>
    <string name="hint_search">Search</string>
    <string name="msg_movie_duplicated">Movie already saved.</string>
    <string name="lbl_actors">Actors</string>
    <string name="lbl_genre">Action, Sci-Fi</string>
    <string name="lbl_year">2011</string>
    <string name="lbl_movie_title">Movie Title</string>
    <string name="lbl_director">Mark Neveldine, Brian Taylor</string>
    <string name="lbl_score">IMDb Score:</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_no_movies_saved">No movies saved, touch plus buttom to add</string>
    <string name="msg_confirm_movie_deletion">Are you sure you want to delete?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_no_connection">Please connect to the internet.</string>
    <string name="lbl_ok">OK</string>
    <string name="msg_connection_error">"Error while connecting to the server. Error: "</string>
    <string name="msg_error_on_search">Error while processing the search data requested.</string>
    <string name="msg_movie_not_found">Movie not found, please try again.</string>
    <string name="lbl_sort_by_name">Order by name</string>
    <string name="lbl_sort_by_date">Order by insertion date</string>
    <string name="lbl_sort_by_year">Ordenar por ano</string>
    <string name="msg_info">Information</string>
    <string name="msg_searching">Searching...</string>
    <string name="msg_title_please_wait">Please wait</string>
    <string name="msb_movie_saved">Movie saved</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_url_encoding_error">"Url encoding error: "</string>
    <string name="msg_error">Error</string>
    <string name="msg_movie_deleted">Movie deleted</string>
    <string name="lbl_sort">Sort</string>

</resources>
