<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="85dp"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/desc_img_movie"
            android:scaleType="centerInside"
            android:src="@drawable/ic_zup_movies" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/img_poster"
            android:layout_toRightOf="@id/img_poster"
            android:gravity="top"
            android:lines="2"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/lbl_movie_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_title"
            android:layout_alignStart="@id/tv_title"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:text="@string/lbl_year"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_title"
            android:layout_alignStart="@id/tv_title"
            android:layout_below="@id/tv_year"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="top"
            android:text="@string/lbl_genre"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_title"
            android:layout_alignStart="@id/tv_title"
            android:layout_below="@id/tv_genre"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:gravity="top"
            android:lines="2"
            android:text="@string/lbl_director"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_imdb_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/img_poster"
            android:layout_alignLeft="@id/tv_title"
            android:layout_alignStart="@id/tv_title"
            android:ellipsize="end"
            android:gravity="top"
            android:text="@string/lbl_score"
            android:textSize="12sp" />


    </RelativeLayout>

</android.support.v7.widget.CardView>